--- a/Final_Project_Part_1.Rmd
+++ b/Final_Project_Part_1.Rmd
@@ -28,5 +28,6 @@ __Some analysis plans that do not make sense within the context of the project:_
 •    suggest sth not requested, like global alignment possibly with Needleman-Wunsch algorithm
 •    Perform PCA for each significant gene
 
+hello 
 
 This looks complicated
