--- a/Final_Project_Part_1.Rmd
+++ b/Final_Project_Part_1.Rmd
@@ -18,6 +18,7 @@ output:
 RNAseq_KIRC <- read.csv("RNAseq_KIRC.csv")
 data_clinical_patient <- read.delim("data_clinical_patient.txt", header = TRUE, sep = "\t", skip = 4)
 data_mutations <- read.delim("data_mutations.txt", header = TRUE, sep = "\t", stringsAsFactors = FALSE)
+head(data_clinical_patient)
 ```
 
 ### Run the intersect of all the patient sets - code reused from lab 7 submission
@@ -35,32 +36,31 @@ mutation_patient_ids <- unique(substr(data_mutations$Tumor_Sample_Barcode, 1, 12
 common_patients <- Reduce(intersect, list(rna_patient_ids, clinical_patient_ids, mutation_patient_ids))
 ```
 
-
+### Data Cleaning
 ```{r}
-colnames(data_clinical_patient)
-# Step 1: Inspect unique values to see exact formatting
-unique(data_clinical_patient$AJCC_PATHOLOGIC_TUMOR_STAGE)
-
-# Step 2: Clean the column (remove spaces, lowercase, handle NAs)
-stages <- trimws(tolower(data_clinical_patient$AJCC_PATHOLOGIC_TUMOR_STAGE))
-
-# Convert Roman numerals to numbers 
-data_clinical_patient$AJCC_PATHOLOGIC_TUMOR_STAGE <- sapply(stages, function(x) {
-  if (grepl("stage", x)) {
-    as.numeric(as.roman(gsub("stage ", "", x)))
-  } else {
-    NA  
-  }
-})
+#library(dplyr)
+#library(stringr)
+# Converting Stage String into Numerical Value
+data_clinical_patient <- data_clinical_patient %>%
+  mutate(
+    #convert to uppercase and remove spaces
+    AJCC_clean = toupper(str_replace_all(AJCC_PATHOLOGIC_TUMOR_STAGE, " ", "")),
+    AJCC_PATHOLOGIC_TUMOR_STAGE = str_replace_all(AJCC_clean, c(
+       "STAGEIV" = "4", 
+       "STAGEIII" = "3",
+       "STAGEII" = "2",
+       "STAGEI" = "1")
+       ),
+    # Convert the resulting column to numeric
+    AJCC_PATHOLOGIC_TUMOR_STAGE = as.numeric(AJCC_PATHOLOGIC_TUMOR_STAGE)
+  )
+head(data_clinical_patient)
 ```
 
 
-### Data Cleaning
 ```{r}
-# Converting Stage String into Numerical Value
-
 # Convert OS, DSS, PFS, DFS into binary Value, where 1 is survival and 0 is end-point
-
+head(data_clinical_patient, 30)
 ```
 
 ## Data Exploration 
