--- a/Final_Project_Part_1.Rmd
+++ b/Final_Project_Part_1.Rmd
@@ -131,12 +131,12 @@ library(ggplot2)
 age_df <- data.frame(AGE = data_clinical_patient$AGE)
 
 # Plot the boxplot
-ggplot(age_df, aes(y = AGE)) +
+ggplot(age_df, aes(x = AGE)) +
   geom_boxplot(fill = "skyblue", color = "black") +
   labs(
     title = "Distribution of Ages Among Patients",
-    x = "",
-    y = "Age (years)"
+    x = "Age (years)",
+    y = ""
     ) +
   theme_minimal(base_size = 14)
 ```
